changed Malla Reddy to MREC

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 												<p>17:00 pm - 19:00 pm</p>
 											</div>
 											<div class="schedule-place">
-												<p>Online &<br>Offline<br>Hackerrank & <br> Malla Reddy</p>
+												<p>Online &<br>Offline<br>Hackerrank & <br> MREC</p>
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-0">
@@ -561,7 +561,7 @@
 												<p>13:00 pm - 16:00 pm</p>
 											</div>
 											<div class="schedule-place">
-												<p>Major Auditorium <br>Malla Reddy</p>
+												<p>Major Auditorium <br>MREC</p>
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-0">
