Added Portfolio link at line 277

--- a/index.html
+++ b/index.html
@@ -265,17 +265,19 @@
 										</div>
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
-												<h6>Bhargav</h6>
+												<h6>Bhargav </h6>
 												<img src="img/t6.jpg" alt="">
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
-											<h5>Bhargav</h5>
+											<h5>Bhargav Gangapuram</h5>
 											<p><em>Technical Lead</em></p>
 											<p class="mt-4">Technical Lead at CodeChef MREC Chapter, Web Dev, DevOps, AWS/GCP, Data Science.</p>
 											<div class="social-team mt-4">
+												<a href="http://bhargavgb.social">Portfolio </a> 
 												<a href="https://www.codechef.com/users/bhargavgb ">codechef</a>
 												<a href="https://www.linkedin.com/in/gangapurambhargav/">linkedin</a>
+												
 											</div>
 										</div>
 										<div class="col-md-3 mt-5">
