--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Sathwika Mallepally</h5>
 											<p><em>Event and Internal Affairs</em></p>
-											<p class="mt-4">I'm a coding enthusiast and currently developing my skills in web development and looking forward to learn new technologies.</p>
+											<p class="mt-4">I'm currently working on being proficient in webdev and delving into new technologies</p>
 											<div class="social-team mt-4">
 												<a href="https://www.codechef.com/users/sathwikaa">codechef</a>
 												<a href="https://www.linkedin.com/in/sathwika-reddy-532803215">linkedin</a>
