fix: name_change

--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@
 										</div>
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
-												<h6>Rohan Sanjeev</h6>
+												<h6>Rohan</h6>
 												<img src="img/t16.jpg" alt="">
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
-											<h5>Rohan Sanjeev</h5>
+											<h5>Rohan</h5>
 											<p><em>Graphical Designer</em></p>
 											<p class="mt-4">I'm a computer science student, a designer, and a versatile person. I like designing & building products. I love writing blogs on things I learn as a part of the courses I take in my free time. Also a mechanical keyboard enthusiast, balisong flipper, freelancer, volunteer, pianist, tech support andy, photoshop wizard, and more. impact the lives of users. Passionate for UX/UI design. I Enjoy learning, improving, and sharing my skills and knowledge as much as designing and building.</p>
 											<div class="social-team mt-4">
