--- a/index.html
+++ b/index.html
@@ -490,7 +490,9 @@
 												<h7 class="pl-0">A complete beginner level training of the Git and GitHub.												</h7>
 												<p class="mt-4"><em></em> 04 June 2022</p>
 												<p class="mt-2"><em></em> 10:00 am - 01:00 pm </p>
-												<p class="mt-2 mb-5 mb-sm-0"><em class="no"></em>Pre-requisite: Laptop with internet</p>
+												<p class="mt-2"><em></em> Pre-requisite: Laptop</p>
+												<p class="mt-2"><em></em> Venue: Major Auditorium</p>
+												<p class="mt-2 mb-5 mb-sm-0"><em class="no"></em>Internet won't be provided </p>
 												<a href="https://forms.gle/16h1B4pHYseYoZsa8" target="_blank" >Register Here</a>
 											</div>	
 										</div>	
