--- a/index.html
+++ b/index.html
@@ -763,8 +763,35 @@
 													<img src="img/gallery/10.jpg" alt="">
 												</div>
 											</a>
-										</div>									
-
+										</div>		
+										<div class="col-sm-6 col-md-4 mt-4">	
+											<a href="img/gallery/10.jpg" data-fancybox="gallery">							
+												<div class="img-wrap gallery">
+													<img src="img/gallery/13.jpg" alt="">
+												</div>
+											</a>
+										</div>							
+										<div class="col-sm-6 col-md-4 mt-4">	
+											<a href="img/gallery/10.jpg" data-fancybox="gallery">							
+												<div class="img-wrap gallery">
+													<img src="img/gallery/14.jpg" alt="">
+												</div>
+											</a>
+										</div>
+										<div class="col-sm-6 col-md-4 mt-4">	
+											<a href="img/gallery/10.jpg" data-fancybox="gallery">							
+												<div class="img-wrap gallery">
+													<img src="img/gallery/15.jpg" alt="">
+												</div>
+											</a>
+										</div>
+										<div class="col-sm-6 col-md-4 mt-4">	
+											<a href="img/gallery/10.jpg" data-fancybox="gallery">							
+												<div class="img-wrap gallery">
+													<img src="img/gallery/16.jpg" alt="">
+												</div>
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
