--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 				</nav>
 				<div class="event-time">
 					<div class="section">
-						<div class="hero-main-title">Intro to <br> Git & GitHub</div>
-						<div class="hero-title">June 4</div>
-						<div class="hero-subtitle"><span>2</span><span>0</span><span>2</span><span>2</span></div>
+						<div class="hero-main-title">SECOND YEARS <br> CODING CONTEST</div>
 					</div>
 					<ul class="countdown">
 						<li> 
@@ -442,13 +440,13 @@
 										<div class="col-md-12">
 											<img src="img/logo.png" alt="">
 											<h6 class="mt-5 mb-3">Get in touch:</h6>
-											<p>codechefmrec@gmail.com</p>
+											<p>contact@mrec.club</p>
 										</div>
 										<div class="col-md-12 mt-5 mb-5">
 											<div class="title-page-line"></div>
 										</div>
 										<div class="col-md-12">
-											<p><small>© 2022 MREC CodeChef.</small></p>
+											<p><small>© 2023 MREC CodeChef</small></p>
 										</div>
 									</div>
 								</div>
@@ -659,14 +657,14 @@
 										<div class="col-md-12">
 											<img src="img/logo.png" alt="">
 											<h6 class="mt-5 mb-3">Get in touch:</h6>
-											<p>codechefmrec@gmail.com</p>
+											<p>contact@mrec.club</p>
 
 										</div>
 										<div class="col-md-12 mt-5 mb-5">
 											<div class="title-page-line"></div>
 										</div>
 										<div class="col-md-12">
-											<p><small>© 2022 MREC CodeChef.</small></p>
+											<p><small>© 2023 MREC CodeChef</small></p>
 										</div>
 									</div>
 								</div>
@@ -815,13 +813,13 @@
 										<div class="col-md-12">
 											<img src="img/logo.png" alt="">
 											<h6 class="mt-5 mb-3">Get in touch:</h6>
-											<p>codechefmrec@gmail.com</p>
+											<p>contact@mrec.club</p>
 										</div>
 										<div class="col-md-12 mt-5 mb-5">
 											<div class="title-page-line"></div>
 										</div>
 										<div class="col-md-12">
-											<p><small>© 2022 MREC CodeChef.</small></p>
+											<p><small>© 2023 MREC CodeChef</small></p>
 										</div>
 									</div>
 								</div>
@@ -842,7 +840,7 @@
 											<h2 class="content__title">contact us</h2>
 										</div>
 										<div class="col-lg-4 mt-3">
-											<h3 class="content__subtitle">our inbox is always open. wheather you have a question or just want to say hi!</h3>
+											<h3 class="content__subtitle">our inbox is always open. whether you have a question or just want to say hi!</h3>
 										</div>
 									</div>
 								</div>
@@ -901,13 +899,13 @@
 										<div class="col-md-12">
 											<img src="img/logo.png" alt="">
 											<h6 class="mt-5 mb-3">Get in touch:</h6>
-											<p>codechefmrec@gmail.com</p>
+											<p>contact@mrec.club</p>
 										</div>
 										<div class="col-md-12 mt-5 mb-5">
 											<div class="title-page-line"></div>
 										</div>
 										<div class="col-md-12">
-											<p><small>© 2022 MREC CODECHEF.</small></p>
+											<p><small>© 2023 MREC CODECHEF</small></p>
 										</div>
 									</div>
 								</div>
@@ -920,9 +918,9 @@
 			</div>
 			
 			<div class="social-fixed">
-				<a href="https://www.linkedin.com/company/codechefmrec/" target="_blank">linkedIn</a>
+				<a href="https://www.mrec.club/join" target="_blank">Community</a>
 				<a href="https://www.instagram.com/codechefmrec/" target="_blank">Instagram</a>
-				<a href="https://discord.gg/Cdk4ZpkTUr" target="_blank">Discord</a>
+				<a href="https://www.mrec.club/discord" target="_blank">Discord</a>
 			</div>
 			
 		</main>
