--- a/index.html
+++ b/index.html
@@ -188,19 +188,36 @@
 										<div class="col-md-3">
 											<div class="speaker-image">
 												<h6>Rohan</h6>
-												<img src="img/t1.jpg" alt="">
+												<img src="img/ro.png" alt="">
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-0">
 											<h5>Rohan</h5>
 											<p><em>President</em></p>
-											<p class="mt-4"></p>
+											<p class="mt-4">Designer & Developer</p>
 											<div class="social-team mt-4">
-												<a href="https://www.codechef.com/users/rahulsiddharth">codechef</a>
-												<a href="https://www.linkedin.com/in/rahulsiddharthdacha/">linkedin</a>
-												<a href="https://github.com/rahulsiddharthdacha">github</a>
+												<a href="https://rohzzn.me">portfolio</a>
+												<a href="https://github.com/rohzzn">github</a>
+												<a href="https://linkedin.com/in/rohzzn">linkedin</a>
 											</div>
 										</div>
+
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Keerti Hegde</h6>
+												<img src="img/t15.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Keerti Hegde</h5>
+											<p><em>Vice President</em></p>
+											<p class="mt-4">Second year CSE student. Coding enthusiast.</p>
+											<div class="social-team mt-4">
+												<a href="https://www.codechef.com/users/keertihegde002">codechef</a>
+												<a href="https://www.linkedin.com/in/keerti-hegde">linkedin</a>
+											</div>
+										</div>
+
 									</div>
 								</div>
 							</div>
