--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Keerti Hegde</h5>
 											<p><em>Vice President</em></p>
-											<p class="mt-4">Second year CSE student. Coding enthusiast.</p>
+											<p class="mt-4">Coding enthusiast.</p>
 											<div class="social-team mt-4">
 												<a href="https://www.codechef.com/users/keertihegde002">codechef</a>
 												<a href="https://www.linkedin.com/in/keerti-hegde">linkedin</a>
@@ -420,20 +420,7 @@
 												<a href="https://www.behance.net/thirumaleshd">behance</a>
 											</div>
 										</div>
-										<div class="col-md-3 mt-5">
-											<div class="speaker-image">
-												<h6>Kata Srikanth</h6>
-												<img src="img/t13.jpg" alt="">
-											</div>
-										</div>
-										<div class="col-md-9 mt-4 mt-md-5">
-											<h5>Kata Srikanth</h5>
-											<p><em>Media Lead</em></p>
-											<p class="mt-4"></p>
-											<div class="social-team mt-4">
-												<a href="https://www.codechef.com/users/srikanth_26">codechef</a>
-											</div>
-										</div>
+									
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
 												<h6>Lavan Thamishetty</h6>
@@ -473,7 +460,7 @@
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Rohan</h5>
 											<p><em>Graphical Designer</em></p>
-											<p class="mt-4">I'm a computer science student, a designer, and a versatile person. I like designing & building products. I love writing blogs on things I learn as a part of the courses I take in my free time. Also a mechanical keyboard enthusiast, balisong flipper, freelancer, volunteer, pianist, tech support andy, photoshop wizard, and more. impact the lives of users. Passionate for UX/UI design. I Enjoy learning, improving, and sharing my skills and knowledge as much as designing and building.</p>
+											<p class="mt-4">Designing and Building.</p>
 											<div class="social-team mt-4">
 												<a href="https://rohzzn.me">portfolio</a>
 												<a href="https://www.linkedin.com/in/rohansanjeev/">linkedin</a>
