--- a/index.html
+++ b/index.html
@@ -217,7 +217,156 @@
 												<a href="https://www.linkedin.com/in/keerti-hegde">linkedin</a>
 											</div>
 										</div>
-
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Pranay</h6>
+												<img src="img/Board2023/et1.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Pranay Kumar</h5>
+											<p><em>A Events Team Member</em></p>
+											<p class="mt-4">Tech Enthusiast</p>
+											<div class="social-team mt-4">
+												<a href="http://GitHub.com/PrnyReddy">github</a>
+												<a href="http://LinkedIn.com/in/prnyreddy">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Hitesh</h6>
+												<img src="img/Board2023/et2.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Hitesh Agarwal</h5>
+											<p><em>A Events Team Member</em></p>
+											<!-- <p class="mt-4">Bio</p> -->
+											<div class="social-team mt-4">
+												<a href="#">github</a>
+												<a href="https://in.linkedin.com/in/hitesh-agarwal-7765501a8">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Sathvika</h6>
+												<img src="img/Board2023/tt1.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Sathvika Reddy</h5>
+											<p><em>A Technical Team Member</em></p>
+											<p class="mt-4">savvy individual with a passion for coding and event management.</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/sathvikareddy09">github</a>
+												<a href="https://www.linkedin.com/in/sr9/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Shamitha</h6>
+												<img src="img/Board2023/tt2.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Y Shamitha</h5>
+											<p><em>A Technical Team Member</em></p>
+											<!-- <p class="mt-4">Bio</p> -->
+											<div class="social-team mt-4">
+												<a href="#">github</a>
+												<a href="#">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Sai Kiran</h6>
+												<img src="img/Board2023/tt3.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Y Sai Kiran</h5>
+											<p><em>A Technical Team Member</em></p>
+											<!-- <p class="mt-4">Bio</p> -->
+											<div class="social-team mt-4">
+												<a href="#">github</a>
+												<a href="#">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Nikhil</h6>
+												<img src="img/Board2023/tt4.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Nikhil CH</h5>
+											<p><em>A Technical Team Member</em></p>
+											<p class="mt-4">Developer , Nft's Enthusiast</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/nikhilchalla">github</a>
+												<a href="http://linkedin.com/in/Nikhil-Challa">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Nithin</h6>
+												<img src="img/Board2023/bp.png" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Nithin</h5>
+											<p><em>A Technical Team Member</em></p>
+											<p class="mt-4">Curious developer, exploring and learning.</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/NithinGannarpu">github</a>
+												<a href="https://www.linkedin.com/in/nithin-gannarpu/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Sathwika</h6>
+												<img src="img/Board2023/cp2.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Sathwika Pippari</h5>
+											<p><em>A CP team Member</em></p>
+											<p class="mt-4">I may not be a master chef , but I can cook some mean code when I am hungry</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/Pippari-Sathwika11">github</a>
+												<a href="https://www.linkedin.com/in/sathwika-pippari/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Aditya</h6>
+												<img src="img/Board2023/cp3.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Bal Aditya</h5>
+											<p><em>A CP team Member</em></p>
+											<p class="mt-4">Avid Programmer</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/bal-aditya">github</a>
+												<a href="https://www.linkedin.com/in/bal-aditya/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
+												<h6>Balaji</h6>
+												<img src="img/Board2023/cp4.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Balaji Sai</h5>
+											<p><em>A CP team Member</em></p>
+											<p class="mt-4">Tech Enthusiast, Programmer, Problem Solver</p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/BalajiSai2003">github</a>
+												<a href="https://www.linkedin.com/in/balajisai2003/">linkedin</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
