--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
 												<h6>Nithin</h6>
-												<img src="img/Board2023/bp.png" alt="">
+												<img src="img/Board2023/tt5.jpg" alt="">
 											</div>
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
