--- a/index.html
+++ b/index.html
@@ -219,6 +219,21 @@
 										</div>
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
+												<h6>Ashish</h6>
+												<img src="img/Board2023/cp1.jpg" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Ashish Ettaveni</h5>
+											<p><em>CP head</em></p>
+											<p class="mt-4"></p>
+											<div class="social-team mt-4">
+												<a href="https://github.com/Ashish-ettaveni">github</a>
+												<a href="https://www.linkedin.com/in/ashish-ettaveni-80a40922a/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
 												<h6>Pranay</h6>
 												<img src="img/Board2023/et1.jpg" alt="">
 											</div>
