--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Pranay Kumar</h5>
-											<p><em>A Events Team Member</em></p>
+											<p><em>Events Team Member</em></p>
 											<p class="mt-4">Tech Enthusiast</p>
 											<div class="social-team mt-4">
 												<a href="http://GitHub.com/PrnyReddy">github</a>
@@ -255,7 +255,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Hitesh Agarwal</h5>
-											<p><em>A Events Team Member</em></p>
+											<p><em>Events Team Member</em></p>
 											<!-- <p class="mt-4">Bio</p> -->
 											<div class="social-team mt-4">
 												<a href="#">github</a>
@@ -270,7 +270,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Sathvika Reddy</h5>
-											<p><em>A Technical Team Member</em></p>
+											<p><em>Technical Team Member</em></p>
 											<p class="mt-4">savvy individual with a passion for coding and event management.</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/sathvikareddy09">github</a>
@@ -285,7 +285,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Y Shamitha</h5>
-											<p><em>A Technical Team Member</em></p>
+											<p><em>Technical Team Member</em></p>
 											<!-- <p class="mt-4">Bio</p> -->
 											<div class="social-team mt-4">
 												<a href="#">github</a>
@@ -300,7 +300,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Y Sai Kiran</h5>
-											<p><em>A Technical Team Member</em></p>
+											<p><em>Technical Team Member</em></p>
 											<!-- <p class="mt-4">Bio</p> -->
 											<div class="social-team mt-4">
 												<a href="#">github</a>
@@ -315,7 +315,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Nikhil CH</h5>
-											<p><em>A Technical Team Member</em></p>
+											<p><em>Technical Team Member</em></p>
 											<p class="mt-4">Developer , Nft's Enthusiast</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/nikhilchalla">github</a>
@@ -330,7 +330,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Nithin</h5>
-											<p><em>A Technical Team Member</em></p>
+											<p><em>Technical Team Member</em></p>
 											<p class="mt-4">Curious developer, exploring and learning.</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/NithinGannarpu">github</a>
@@ -345,7 +345,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Sathwika Pippari</h5>
-											<p><em>A CP team Member</em></p>
+											<p><em>CP team Member</em></p>
 											<p class="mt-4">I may not be a master chef , but I can cook some mean code when I am hungry</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/Pippari-Sathwika11">github</a>
@@ -360,7 +360,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Bal Aditya</h5>
-											<p><em>A CP team Member</em></p>
+											<p><em>CP team Member</em></p>
 											<p class="mt-4">Avid Programmer</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/bal-aditya">github</a>
@@ -375,7 +375,7 @@
 										</div>
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Balaji Sai</h5>
-											<p><em>A CP team Member</em></p>
+											<p><em>CP team Member</em></p>
 											<p class="mt-4">Tech Enthusiast, Programmer, Problem Solver</p>
 											<div class="social-team mt-4">
 												<a href="https://github.com/BalajiSai2003">github</a>
