updated Hitesh details

--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Hitesh Agarwal</h5>
 											<p><em>Events Team Member</em></p>
-											<!-- <p class="mt-4">Bio</p> -->
+											<p class="mt-4">Go-Getter Embracing the Power of Technologies.</p>
 											<div class="social-team mt-4">
-												<a href="#">github</a>
+												<a href="https://github.com/iamhitesh30">github</a>
 												<a href="https://in.linkedin.com/in/hitesh-agarwal-7765501a8">linkedin</a>
 											</div>
 										</div>
