--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 										<div class="col-md-9 mt-4 mt-md-5">
 											<h5>Vanshita Medala</h5>
 											<p><em>Technical Team Member</em></p>
-											<p class="mt-4"> </p>
+											<p class="mt-4">Pixel poet painting with logic and pixels 🎨</p>
 											<div class="social-team mt-4">
 												<a href="https://www.linkedin.com/in/vanshitamedala/">linkedin</a>
 											</div>
