tag line changes

--- a/index.html
+++ b/index.html
@@ -219,6 +219,20 @@
 										</div>
 										<div class="col-md-3 mt-5">
 											<div class="speaker-image">
+												<h6>Harshita</h6>
+												<img src="img/harshi.png" alt="">
+											</div>
+										</div>
+										<div class="col-md-9 mt-4 mt-md-5">
+											<h5>Devarakonda Harshita Vardhani</h5>
+											<p><em>Technical Team Member</em></p>
+											<p class="mt-4">Bug creator 🐛 & Aspiring couch potato</p>
+											<div class="social-team mt-4">
+												<a href="https://www.linkedin.com/in/vanshitamedala/">linkedin</a>
+											</div>
+										</div>
+										<div class="col-md-3 mt-5">
+											<div class="speaker-image">
 												<h6>Vanshita</h6>
 												<img src="img/vans.png" alt="">
 											</div>
