--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 											<p><em>Technical Team Member</em></p>
 											<p class="mt-4">Bug creator 🐛 & Aspiring couch potato</p>
 											<div class="social-team mt-4">
-												<a href="https://www.linkedin.com/in/vanshitamedala/">linkedin</a>
+												<a href="https://www.linkedin.com/in/harshitha-vardhani/">linkedin</a>
 											</div>
 										</div>
 										<div class="col-md-3 mt-5">
